[gd_scene load_steps=2 format=3 uid="uid://c2offmhd7a3e"]

[ext_resource type="Script" path="res://Highscores.gd" id="1_i2q8c"]

[node name="Highscores" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2q8c")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 512.0
offset_right = 320.0
offset_bottom = 584.0
text = "Add Score
"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 512.0
offset_right = 1152.0
offset_bottom = 584.0
text = "Remove Score #"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 384.0
offset_right = 320.0
offset_bottom = 448.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 384.0
offset_right = 1152.0
offset_bottom = 448.0

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 128.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_pressed"]
